--- a/gb/21/6/26/n13049010.md
+++ b/gb/21/6/26/n13049010.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/acvvvw3786/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/acvvvw3786/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/acvvvw3786/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/acvvvw3786/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/acvvvw3786/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/acvvvw3786/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/acvvvw3786/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/acvvvw3786/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/acvvvw3786/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/acvvvw3786/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/acvvvw3786/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/acvvvw3786/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/acvvvw3786/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/acvvvw3786/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/acvvvw3786/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/acvvvw3786/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/acvvvw3786/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/acvvvw3786/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/acvvvw3786/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/acvvvw3786/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/acvvvw3786/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/acvvvw3786/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/acvvvw3786/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/acvvvw3786/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>田云：中共的“新型政党制度”是何货色？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/11/zhongnaihai.jpg" />
 <h6>图为中南海西门。(AFP)
 </h6>
 <hr>
 	<p>【大纪元2021年06月26日讯】6月25日，中共发表了《新型政党制度》白皮书，称中共领导的多党合作和政治协商制度“符合中国国情和国家治理需要”，“有利于国家发展、民族振兴、社会进步、人民幸福”。</p>
-<p>中共的说法违背事实。中共专制72年，多次政治运动和灾难夺走了8千万中国人的生命。今日，中国环境污染严重，传统文化遭到破坏，6亿国人月收入仅有一千元人民币，更有大量贫困人口。中共一党独大，命令各界民众跟党走、听党话，其建政后不允许新党成立，所谓“多党合作”不过是政治花瓶。中共实行报禁，<ahref="https://github.com/acvvvw3786/djy/blob/master/gb/tag/%E5%85%9A%E7%A6%81.md#1">党禁</a>，设立森严的网络封锁，肆意侵害人权。当中共不断地重复它的歪理邪说时，我们有必要重温历史，正视现实。</p>
+<p>中共的说法违背事实。中共专制72年，多次政治运动和灾难夺走了8千万中国人的生命。今日，中国环境污染严重，传统文化遭到破坏，6亿国人月收入仅有一千元人民币，更有大量贫困人口。中共一党独大，命令各界民众跟党走、听党话，其建政后不允许新党成立，所谓“多党合作”不过是政治花瓶。中共实行报禁，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%9A%E7%A6%81.md#1">党禁</a>，设立森严的网络封锁，肆意侵害人权。当中共不断地重复它的歪理邪说时，我们有必要重温历史，正视现实。</p>
 <h2><strong>中共一党制的实质</strong></h2>
 <p>中共为何坚持一党制？邓小平曾声称，那是为了“社会稳定”。中共官媒、文件和发言人多次称，这是由于国情需要，是“人民的选择”云云。</p>
 <p>2021年３月12日，党媒新华社刊文称：“从党的十九届五中全会到2021年全国两会，党的主张通过法定程序转化为国家意志，汇聚全党全国各族人民智慧和意愿的规划纲要……”这句话赤裸裸地表明：中共利用法律把自己的企图强行转化为“国家意志”，并强行代表“各族人民”。可见，中共建政以来出台的所有政策，都是党的主张，根本不能反映民意。</p>
@@ -31,9 +31,9 @@
 <h2><strong>中共与民主党派“肝胆相照”？</strong></h2>
 <p>中共称，它与各民主党派“风雨同舟”、“肝胆相照”，事实上，那些民主人士都是中共掌中的棋子、工具，被用来“烘托”中共的“开明”。倘若民主派不对党俯首听命，就连花瓶也没得做了。</p>
 <p>1957年4月下旬，中共邀请各民主党派负责人帮助整风，鼓励他们“知无不言，言无不尽”。当时几位知名民主派人士欣然向党提了些意见和建议，结果被打成“右派”，受到严厉整肃。</p>
-<p>“头号大右派”章伯钧当时是全国人大常委、全国政协副主席、中央交通部部长、农工民主党主席、民盟中央副主席，结果他的社会职务基本被撤销，“<ahref="https://github.com/acvvvw3786/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>”中全家因其“右派”身份持续遭受批斗。</p>
-<p>当时的民盟中央副主席罗隆基建议，由全国人和政协成立一个委员会，要检查“三反”、“五反”、“肃反”运动中的失误偏差，还要鼓励大家申冤枉，而该委员会须由执政党、民主党派和无党派民主人士三方面组成。</p>
-<p>民盟中央委员、上海市政协常委的彭文应曾表示：“学习苏联不一定好，学习美国不一定坏”。彭文应遭批判之初，其病妻邓世琳就受惊吓身亡。1958年4月，彭文应被撤销一切职务，取消原有的工资津贴。1961年12月，彭文应的次子在极度苦闷和压抑下，服安眠药自杀。1962年12月15日，彭文应病逝，至死没有认罪。“<ahref="https://github.com/acvvvw3786/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>”期间，彭家墓地被红卫兵掘开一扫而光。</p>
+<p>“头号大右派”章伯钧当时是全国人大常委、全国政协副主席、中央交通部部长、农工民主党主席、民盟中央副主席，结果他的社会职务基本被撤销，“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>”中全家因其“右派”身份持续遭受批斗。</p>
+<p>当时的民盟中央副主席罗隆基建议，由全国人和政协成立一个委员会，要检查“三反”、“五反”、“肃反”运动中的失误偏差，还要鼓励大家申冤，而该委员会须由执政党、民主党派和无党派民主人士三方面组成。</p>
+<p>民盟中央委员、上海市政协常委的彭文应的“右派”言论有：“学习苏联不一定好，学习美国不一定坏”。彭文应遭批判之初，其病妻邓世琳就受惊吓身亡。1958年4月，彭文应被撤销一切职务，取消原有的工资津贴。1961年12月，彭文应的次子在极度苦闷和压抑下，服安眠药自杀。1962年12月15日，彭文应病逝，至死没有认罪。“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>”期间，彭家墓地被红卫兵掘开一扫而光。</p>
 <p>据中共官方报导，文革期间，“各民主党派、工商联的领导人及其成员多数都遭到诬陷和迫害。据统计，各民主党派在北京的中央委员和候补中央委员中，被揪斗和查抄的占36．5％。”</p>
 <p>往事残酷，或许，这就是现今大陆各民主党派与中共“亲密合作”、相安无事的主因。中共治下，民主派和各界群众面临同样的选择：听党话、跟党走，放弃人性和良知，你可能仕途顺利，名利双收；假如一个人坚持真理和正义，那他或她就会被党视为敌人，被逼上绝路。</p>
 <h2><strong>结语</strong></h2>
@@ -44,41 +44,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/25/n13046140.md#1">田云：反普世人权 中共最新白皮书自揭底牌</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/25/n13046482.md#1">【特稿】一场中共不想让您看的演出</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/25/n13046619.md#1">中共七一临近 天安门周边道路陆续交通管制</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/25/n13047941.md#1">【重播】美智库中国透明度报告 对抗中共威胁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13046140.md#1">田云：反普世人权 中共最新白皮书自揭底牌</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13046482.md#1">【特稿】一场中共不想让您看的演出</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13046619.md#1">中共七一临近 天安门周边道路陆续交通管制</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13047941.md#1">【重播】美智库中国透明度报告 对抗中共威胁</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10311201.md#1" target="_blank">心升：以史为镜看毛邪（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/2/n10356748.md#1" target="_blank">林辉：并未救国的“五四运动”只是胡闹而已</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/18/n13031032.md#1">神机妙算的孔明 面临成败生死如何看天意？</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/13/n13019873.md#1">【忽必烈传】南宋气数尽 蒙元攻下襄樊</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/16/n13026383.md#1">出入冥界神界看到过去未来事  他们捎给人什么讯息？</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/5/14/n12948096.md#1">【金色种子】一位走入大法修炼的气功师</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/17/n13029141.md#1">【未解之谜】爱德加·凯西和他的“生命解读”</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/25/n13047893.md#1">【财商天下】经济复苏强劲 美联储何时加息？</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/25/n13047941.md#1">【重播】美智库中国透明度报告 对抗中共威胁</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/24/n13045139.md#1">【财商天下】三万重兵入京？美吁重金赏投诚</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/17/n13029449.md#1">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/23/n13042993.md#1">【探索时分】中美舰载机歼15vsF18 谁胜算？</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/23/n13043091.md#1">【新闻看点】中国疫苗爆无效 董经纬事件美发话</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/24/n13045511.md#1">杜汶泽聘用《苹果》失业员工 港人直呼感动</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/23/n13042921.md#1">被节目测体重仅45公斤 杨颖惊人饭量引热议</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/23/n13041118.md#1">陈零九康复后首露面 谈有后遗症“恐慌”</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/23/n13042428.md#1">贾永婕曝子瑜捐PAPR助台湾抗疫：她的生日愿望</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/24/n13043954.md#1">《变形金刚：万兽崛起》柯博文、大黄蜂回归</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/17/n13029449.md#1">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/23/n13042201.md#1">打疫苗后现死亡案例？医师：2种情况暂缓施打</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/23/n13042990.md#1">2种食物是“天然补血剂” 这样吃效果最好</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/24/n13044254.md#1">日本小学生意外跟野熊道早安 熊被吓跑了</a></li>
-<li><a href="https://github.com/acvvvw3786/djy/blob/master/gb/21/6/23/n13041224.md#1">为了救主人 美国忠狗被有毒的响尾蛇咬伤</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/acvvvw3786/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/acvvvw3786/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/26/n13049010.htm">田云：中共的“新型政党制度”是何货色？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/26/n13049010.htm">田云：中共的“新型政党制度”是何货色？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/acvvvw3786/djy/blob/master/gb/21/6/26/n13049010.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/acvvvw3786/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/acvvvw3786/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/acvvvw3786/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/acvvvw3786/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/acvvvw3786/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/26/n13049010.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
